fix the jumppy scroll

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -91,6 +91,9 @@ body, h1, h2, h3, h4 {
 }
 .slides {
   width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .slider {}
